--- a/static/about.html
+++ b/static/about.html
@@ -14,10 +14,10 @@
   <body style=" background-size: fill; background-position:unset;">
     <!-- As a link -->
 <nav class="navbar navbar-light">
-    <a class="navbar-brand" href="#"><img src="/images/sprink_logo_png 1.png" class="ml-5" alt=""></a>
+    <a class="navbar-brand" href="#"><img src="./images/sprink_logo_png 1.png" class="ml-5" alt=""></a>
   </nav>
   
-<div class="nav_img"><img class="mx-auto d-block"src="/images/Group 13462.png" alt=""></div>
+<div class="nav_img"><img class="mx-auto d-block"src="./images/Group 13462.png" alt=""></div>
 
 <div class="container">
 <div class="">
@@ -56,7 +56,7 @@
         <div class="col-md-4 my-2">
           <div class="row  justify-content-md-center ">
             <div class="">
-              <img src="/images/Group 13434.png" class="px-2" alt="">
+              <img src="./images/Group 13434.png" class="px-2" alt="">
             </div>
          <div class="col-5 px-0 ">
           <h6>Ingredients Sourced from Licensed Vendors</h6>
@@ -82,7 +82,7 @@
       <div class="col-md-4 my-2">
         <div class="row  justify-content-md-center">
           <div class="">
-            <img src="/images/Group 13434.png" class="px-2" alt="">
+            <img src="./images/Group 13434.png" class="px-2" alt="">
           </div>
        <div class="col-5 px-0 ">
         <h6>No Frozen Ingredients </h6>
@@ -107,7 +107,7 @@ Indian cuisine comes alive in every bite.
     <div class="col-md-4 my-2">
       <div class="row  justify-content-md-center">
         <div class="">
-          <img src="/images/Group 13434.png" class="px-2" alt="">
+          <img src="./images/Group 13434.png" class="px-2" alt="">
         </div>
      <div class="col-5 px-0 ">
       <h6>Real Cooking by Expert Chefs  
@@ -136,7 +136,7 @@ everything for quality before plating and sending to dispatch.
         <div class="col-md-4 my-2">
           <div class="row  justify-content-md-center">
             <div class="">
-              <img src="/images/Group 13434.png" class="px-2" alt="">
+              <img src="./images/Group 13434.png" class="px-2" alt="">
             </div>
          <div class="col-5 px-0 ">
           <h6>Healthy Standardised Usage of Oils & Spices 
@@ -161,7 +161,7 @@ is prepped with keeping this in the center.
       <div class="col-md-4 my-2">
         <div class="row  justify-content-md-center">
           <div class="">
-            <img src="/images/Group 13434.png" class="px-2" alt="">
+            <img src="./images/Group 13434.png" class="px-2" alt="">
           </div>
        <div class="col-5 px-0 ">
         <h6>All natural ingredients.</h6>
@@ -274,7 +274,7 @@ is prepped with keeping this in the center.
   <section>
     <div class="">
       <div class="row ">
-        <div class="col pr-5  text-center"><a href="" class="pr-5"><img class="pr-5" src="/images/Group 13463.png" alt=""></a></div>
+        <div class="col pr-5  text-center"><a href="" class="pr-5"><img class="pr-5" src="./images/Group 13463.png" alt=""></a></div>
        
         <div class="col-lg">
         <div class=""> <div class="row  ">
