--- a/static/faq.html
+++ b/static/faq.html
@@ -14,10 +14,10 @@
   <body class="bgsize" style=" background-size: cover;">
     <!-- As a link -->
 <nav class="navbar navbar-light">
-    <a class="navbar-brand" href="#"><img src="/images/sprink_logo_png 1.png" class="ml-5" alt=""></a>
+    <a class="navbar-brand" href="#"><img src="./images/sprink_logo_png 1.png" class="ml-5" alt=""></a>
   </nav>
   
-<div class="nav_img"><img class="mx-auto d-block"src="/images/faq.png" alt=""></div>
+<div class="nav_img"><img class="mx-auto d-block"src="./images/faq.png" alt=""></div>
 
 <div class="container">
   <div class="row"><div class=" col-11">
@@ -33,7 +33,7 @@
                 <div class="col-11 "><h6>How does Sprink meal subscription work?</h6>
                 </div>
                <div class="col-1 text-center"> <a class="" data-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
-                <img src="/images/Union.png" class="img1" onclick="showSlides(this)" alt="">
+                <img src="./images/Union.png" class="img1" onclick="showSlides(this)" alt="">
             </a></div>
         </div>
               <div class="collapse" id="collapseExample">
@@ -57,7 +57,7 @@
                 <div class="col-11"><h6>What’s a cut off time and how does it affect my orders?</h6>
                 </div>
                <div class="col-1 text-center"> <a class="" data-toggle="collapse" href="#collapseExample1" role="button" aria-expanded="false" aria-controls="collapseExample">
-                <img src="/images/Union.png" class="img1" onclick="showSlides(this)" alt="">
+                <img src="./images/Union.png" class="img1" onclick="showSlides(this)" alt="">
             </a></div>
         </div>
               <div class="collapse" id="collapseExample1">
@@ -72,7 +72,7 @@
                 <div class="col-11"><h6>What's the customer care number?</h6>
                 </div>
                <div class="col-1 text-center"> <a class="" data-toggle="collapse" href="#collapseExample2" role="button" aria-expanded="false" aria-controls="collapseExample">
-                <img src="/images/Union.png" class="img1" onclick="showSlides(this)" alt="">
+                <img src="./images/Union.png" class="img1" onclick="showSlides(this)" alt="">
             </a></div>
         </div>
               <div class="collapse" id="collapseExample2">
@@ -89,7 +89,7 @@
                 </h6>
                 </div>
                <div class="col-1 text-center"> <a class="" data-toggle="collapse" href="#collapseExample3" role="button" aria-expanded="false" aria-controls="collapseExample">
-               <img src="/images/Union.png" class="img1" onclick="showSlides(this)" alt="">
+               <img src="./images/Union.png" class="img1" onclick="showSlides(this)" alt="">
             </a></div>
         </div>
               <div class="collapse" id="collapseExample3">
@@ -107,7 +107,7 @@
                 </h6>
                 </div>
                <div class="col-1 text-center"> <a class="" data-toggle="collapse" href="#collapseExample4" role="button" aria-expanded="false" aria-controls="collapseExample">
-               <img src="/images/Union.png" class="img1" onclick="showSlides(this)" alt="">
+               <img src="./images/Union.png" class="img1" onclick="showSlides(this)" alt="">
             </a></div>
         </div>
               <div class="collapse" id="collapseExample4">
@@ -126,7 +126,7 @@
                 </h6>
                 </div>
                <div class="col-1 text-center"> <a class="" data-toggle="collapse" href="#collapseExample5" role="button" aria-expanded="false" aria-controls="collapseExample">
-               <img src="/images/Union.png" class="img1" onclick="showSlides(this)" alt="">
+               <img src="./images/Union.png" class="img1" onclick="showSlides(this)" alt="">
             </a></div>
         </div>
               <div class="collapse" id="collapseExample5">
@@ -145,7 +145,7 @@
                 </h6>
                 </div>
                <div class="col-1 text-center"> <a class="" data-toggle="collapse" href="#collapseExample6" role="button" aria-expanded="false" aria-controls="collapseExample">
-               <img src="/images/Union.png" class="img1" onclick="showSlides(this)" alt="">
+               <img src="./images/Union.png" class="img1" onclick="showSlides(this)" alt="">
             </a></div>
         </div>
               <div class="collapse" id="collapseExample6">
@@ -162,7 +162,7 @@
                 </h6>
                 </div>
                <div class="col-1 text-center"> <a class="" data-toggle="collapse" href="#collapseExample7" role="button" aria-expanded="false" aria-controls="collapseExample">
-               <img src="/images/Union.png" class="img1" onclick="showSlides(this)" alt="">
+               <img src="./images/Union.png" class="img1" onclick="showSlides(this)" alt="">
             </a></div>
         </div>
               <div class="collapse" id="collapseExample7">
@@ -181,7 +181,7 @@
                     </h6>
                     </div>
                    <div class="col-1 text-center"> <a class="" data-toggle="collapse" href="#collapseExample8" role="button" aria-expanded="false" aria-controls="collapseExample">
-                   <img src="/images/Union.png" class="img1" onclick="showSlides(this)" alt="">
+                   <img src="./images/Union.png" class="img1" onclick="showSlides(this)" alt="">
                 </a></div>
             </div>
                   <div class="collapse" id="collapseExample8">
@@ -200,7 +200,7 @@
                         </h6>
                         </div>
                        <div class="col-1 text-center"> <a class="" data-toggle="collapse" href="#collapseExample9" role="button" aria-expanded="false" aria-controls="collapseExample">
-                       <img src="/images/Union.png" class="img1" onclick="showSlides(this)" alt="">
+                       <img src="./images/Union.png" class="img1" onclick="showSlides(this)" alt="">
                     </a></div>
                 </div>
                       <div class="collapse" id="collapseExample9">
