--- a/static/privacy.html
+++ b/static/privacy.html
@@ -14,10 +14,10 @@
   <body>
     <!-- As a link -->
 <nav class="navbar navbar-light">
-    <a class="navbar-brand" href="#"><img src="/images/sprink_logo_png 1.png" class="ml-5" alt=""></a>
+    <a class="navbar-brand" href="#"><img src="./images/sprink_logo_png 1.png" class="ml-5" alt=""></a>
   </nav>
   
-<div class="nav_img"><img class="mx-auto d-block"src="/images/Frame 20.png" alt=""></div>
+<div class="nav_img"><img class="mx-auto d-block"src="./images/Frame 20.png" alt=""></div>
 
 <div class="container">
     <div class="row justify-content-md-center ">
@@ -141,7 +141,7 @@ If you have questions about this Privacy Policy, please contact us by e-mail at 
   <section>
     <div class="">
       <div class="row ">
-        <div class="col pr-5  text-center"><a href="" class="pr-5"><img class="pr-5" src="/images/Group 13463.png" alt=""></a></div>
+        <div class="col pr-5  text-center"><a href="" class="pr-5"><img class="pr-5" src="./images/Group 13463.png" alt=""></a></div>
        
         <div class="col-lg">
         <div class=""> <div class="row  ">
