--- a/static/t&c.html
+++ b/static/t&c.html
@@ -19,10 +19,10 @@
   <body>
     <!-- As a link -->
 <nav class="navbar navbar-light">
-    <a class="navbar-brand" href="#"><img src="/images/sprink_logo_png 1.png" class="ml-5" alt=""></a>
+    <a class="navbar-brand" href="#"><img src="./images/sprink_logo_png 1.png" class="ml-5" alt=""></a>
   </nav>
   
-<div class="nav_img"><img class="mx-auto d-block"src="/images/Group 13408.png" alt=""></div>
+<div class="nav_img"><img class="mx-auto d-block"src="./images/Group 13408.png" alt=""></div>
 
 <div class="container">
     <div class="row justify-content-md-center ">
