--- a/static/contact.html
+++ b/static/contact.html
@@ -9,15 +9,15 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
     <title>Contact Us</title>
-    <link rel="stylesheet" href="/css/forall.css">
+    <link rel="stylesheet" href="./css/forall.css">
   </head>
   <body style=" background-size: cover; background-position:unset;">
     <!-- As a link -->
 <nav class="navbar navbar-light">
-    <a class="navbar-brand" href="#"><img src="/images/sprink_logo_png 1.png" class="ml-5" alt=""></a>
+    <a class="navbar-brand" href="#"><img src="./images/sprink_logo_png 1.png" class="ml-5" alt=""></a>
   </nav>
   
-<div class="nav_img"><img class="mx-auto d-block"src="/images/Group 13461.png" alt=""></div>
+<div class="nav_img"><img class="mx-auto d-block"src="./images/Group 13461.png" alt=""></div>
 
 <div class="container">
 
@@ -41,7 +41,7 @@
         </div>
         <div class="col bwe border-right">
           <div class="">
-            <div class="row justify-content-md-center"><h1 class="display-4 mb-2"><img class="mb-2" src="/images/Group 13419.png" alt=""></h1>
+            <div class="row justify-content-md-center"><h1 class="display-4 mb-2"><img class="mb-2" src="./images/Group 13419.png" alt=""></h1>
             </div>
             <div class="row justify-content-md-center">      <h6>CONTACT NUMBER</h6></div>
         <div class="row justify-content-md-center">
@@ -52,7 +52,7 @@
         </div>
         <div class="col">
           <div class="">
-            <div class="row justify-content-md-center"><h1 class="display-4 mb-3"><img class="mb-2" src="/images/Group 13164.png" alt=""></h1>
+            <div class="row justify-content-md-center"><h1 class="display-4 mb-3"><img class="mb-2" src="./images/Group 13164.png" alt=""></h1>
             </div>
             <div class="row justify-content-md-center"><h6>EMAIL</h6></div>
               <div class="row justify-content-md-center"><p>contact@sprink.online</p></div>
@@ -96,7 +96,7 @@
   <section>
     <div class="">
       <div class="row ">
-        <div class="col pr-5  text-center"><a href="" class="pr-5"><img class="pr-5" src="/images/Group 13463.png" alt=""></a></div>
+        <div class="col pr-5  text-center"><a href="" class="pr-5"><img class="pr-5" src="./images/sprinkfooter.png" alt=""></a></div>
        
         <div class="col-lg">
         <div class=""> <div class="row  ">
@@ -125,11 +125,11 @@
       <div class="row  ">
         <div class="container">
         <div class="row justify-content-center align-items-center ">
-          <h5><a href="">FAQs </a> <h1 class="pb-3 mb-3 mx-2"> .</h1>  </h5> 
-          <h5> <a href="/privacy/2.html">Privacy</a> <h1 class="pb-3 mb-3 mx-2"> .</h1>  </h5> 
-           <h5><a href="">Careers</a> <h1 class="pb-3 mb-3 mx-2"> .</h1> </h5> 
-           <h5> <a href="">Testimonials</a><h1 class="pb-3 mb-3 mx-2"> .</h1> </h5> 
-          <h5> <a href="/t&c/1.html">Terms & Conditions</a></h5>  
+          <h5><a href="../static/faq.html">FAQs </a> <h1 class="pb-3 mb-3 mx-2"> .</h1>  </h5> 
+          <h5> <a href="../static/privacy.html">Privacy</a> <h1 class="pb-3 mb-3 mx-2"> .</h1>  </h5> 
+           <h5><a href="../static/career.html">Careers</a> <h1 class="pb-3 mb-3 mx-2"> .</h1> </h5> 
+           <h5> <a href="../static/testimonials.html">Testimonials</a><h1 class="pb-3 mb-3 mx-2"> .</h1> </h5> 
+          <h5> <a href="../static/t&c.html">Terms & Conditions</a></h5>  
        </div>
         </div>
 
