--- a/static/privacy.html
+++ b/static/privacy.html
@@ -9,15 +9,15 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
     <title>Privacy Policy</title>
-    <link rel="stylesheet" href="/css/forall.css">
+    <link rel="stylesheet" href="./css/forall.css">
   </head>
   <body>
     <!-- As a link -->
 <nav class="navbar navbar-light">
-    <a class="navbar-brand" href="#"><img src="/images/sprink_logo_png 1.png" class="ml-5" alt=""></a>
+    <a class="navbar-brand" href="#"><img src="./images/sprink_logo_png 1.png" class="ml-5" alt=""></a>
   </nav>
   
-<div class="nav_img"><img class="mx-auto d-block"src="/images/Frame 20.png" alt=""></div>
+<div class="nav_img"><img class="mx-auto d-block"src="./images/Frame 20.png" alt=""></div>
 
 <div class="container">
     <div class="row justify-content-md-center ">
@@ -141,7 +141,7 @@ If you have questions about this Privacy Policy, please contact us by e-mail at 
   <section>
     <div class="">
       <div class="row ">
-        <div class="col pr-5  text-center"><a href="" class="pr-5"><img class="pr-5" src="/images/Group 13463.png" alt=""></a></div>
+        <div class="col pr-5  text-center"><a href="" class="pr-5"><img class="pr-5" src="./images/sprinkfooter.png" alt=""></a></div>
        
         <div class="col-lg">
         <div class=""> <div class="row  ">
@@ -170,11 +170,11 @@ If you have questions about this Privacy Policy, please contact us by e-mail at 
       <div class="row  ">
         <div class="container">
         <div class="row justify-content-center align-items-center ">
-          <h5 class="tc"><a href="">FAQs </a> <h1 class="pb-3 mb-3 mx-2"> .</h1>  </h5> 
-          <h5 class="tc"> <a href="/privacy/2.html">Privacy</a> <h1 class="pb-3 mb-3 mx-2"> .</h1>  </h5> 
-           <h5 class="tc"><a href="">Careers</a> <h1 class="pb-3 mb-3 mx-2"> .</h1> </h5> 
-           <h5 class="tc"> <a href="">Testimonials</a><h1 class="pb-3 mb-3 mx-2"> .</h1> </h5> 
-          <h5 class="tc"> <a href="/t&c/1.html">Terms & Conditions</a></h5>  
+          <h5><a href="../static/faq.html">FAQs </a> <h1 class="pb-3 mb-3 mx-2"> .</h1>  </h5> 
+          <h5> <a href="../static/privacy.html">Privacy</a> <h1 class="pb-3 mb-3 mx-2"> .</h1>  </h5> 
+           <h5><a href="../static/career.html">Careers</a> <h1 class="pb-3 mb-3 mx-2"> .</h1> </h5> 
+           <h5> <a href="../static/testimonials.html">Testimonials</a><h1 class="pb-3 mb-3 mx-2"> .</h1> </h5> 
+          <h5> <a href="../static/t&c.html">Terms & Conditions</a></h5>  
        </div>
         </div>
 
