--- a/static/privacy.html
+++ b/static/privacy.html
@@ -137,17 +137,17 @@ If you have questions about this Privacy Policy, please contact us by e-mail at 
 
 
 </div>
-<footer class="mt-5 pt-5">
+<footer class=" pt-5 mt-5">
   <section>
     <div class="">
       <div class="row ">
-        <div class="col pr-5  text-center"><a href="" class="pr-5"><img class="pr-5" src="./images/sprinkfooter.png" alt=""></a></div>
+        <div class="col pr-sm-5  text-center"><a href="" class="pr-sm-5"><img class="pr-sm-5" src="./images/sprinkfooter.png" alt=""></a></div>
        
         <div class="col-lg">
         <div class=""> <div class="row  ">
 
-          <div class="col  pt-4 mt-3 pr-5 mr-5">
-      <div class="">      <div class="row justify-content-end pr-5 mr-5"><div class="">Follow US</div></div>
+          <div class="col pt-4 mt-3 pr-sm-5 mr-sm-5">
+      <div class="">      <div class="row justify-content-end pr-sm-5 mr-5"><div class="">Follow US</div></div>
       <div class="row justify-content-end pt-3 pb-5"><div class="">
         <a href=""><i class="fab fa-instagram  fad"></i> </a>
         <a href=""><i class="fa fad fa-dribbble mx-2"></i></a>
@@ -155,9 +155,9 @@ If you have questions about this Privacy Policy, please contact us by e-mail at 
         <a href=""><i class="fa fad fa-youtube-play mx-2" aria-hidden="true"></i> </a></div></div>
       </div>
           </div>
-          <div class="col pt-4  ">
-            <div class="row ">Contact US</div>
-            <div class="row pt-3 pb-5">
+          <div class="col pt-4   ">
+            <div class="row pl-sm-0 pl-5 ">Contact US</div>
+            <div class="row pt-3 pb-5 pl-sm-0 pl-4">
   
               <div class="">+91 96114-81517
                 <br>
@@ -169,7 +169,7 @@ If you have questions about this Privacy Policy, please contact us by e-mail at 
       </div>
       <div class="row  ">
         <div class="container">
-        <div class="row justify-content-center align-items-center ">
+        <div class="row justify-content-center align-items-center px-4">
           <h5><a href="../static/faq.html">FAQs </a> <h1 class="pb-3 mb-3 mx-2"> .</h1>  </h5> 
           <h5> <a href="../static/privacy.html">Privacy</a> <h1 class="pb-3 mb-3 mx-2"> .</h1>  </h5> 
            <h5><a href="../static/career.html">Careers</a> <h1 class="pb-3 mb-3 mx-2"> .</h1> </h5> 
