3rd page ready for review

--- a/account/manageadd.html
+++ b/account/manageadd.html
@@ -41,7 +41,7 @@
             
             <li class=" nav-link activ text-center  "><a class=" nav-item  mr-xl-5 pr-xl-3 d-xl-flex justify-content-center"  href="./profile.html">Personal Details</a></li>
             <li class="nav-link active  text-center  "><a class="mr-xl-4  active pr-xl-4 nav-item d-xl-flex justify-content-center"  href="./manageadd.html">Manage Addresses</a></li>
-            <li class="nav-link activ  text-center  "><a class=" mr-xl-3 pr-xl-1 nav-item d-xl-flex justify-content-center"  href="#">Deliveries & Packaging</a></li>
+            <li class="nav-link activ  text-center  "><a class=" mr-xl-3 pr-xl-1 nav-item d-xl-flex justify-content-center"  href="./delivery.html">Deliveries & Packaging</a></li>
             <li class="nav-link activ  text-center "><a class="mr-xl-5 pr-xl-3 pl-xl-1 nav-item d-xl-flex justify-content-center"  href="#">Food Preferences</a></li>
             <li class="nav-link activ  text-center "><a class="mr-xl-3 pr-xl-3 nav-item d-xl-flex justify-content-center"  href="#">Manage Subscription</a></li>
           </ul>
@@ -66,10 +66,10 @@
     <div class="col mainc px-0 ">  <div class="main pb-sm-0 pb-5  p-xl-5 py-sm-5 py-4">
     
      <div class="px-xl-5 mx-xl-5">
-      <div class="mx-lg-5 px-lg-5 pb-sm-2 pb-0 mb-sm-5 mb-0">
+      <div class="mx-lg-5 px-lg-5 pb-sm-0 pb-0 mb-sm-5 mb-0">
         <div class="content bg-white mx-5 px-5  border rounded">
           <form>
-           <div class="m-sm-4 py-sm-2 pt-3">
+           <div class="ml-lg-4 pl-lg-3 py-4 my-3 mx-sm-0 ">
             <div class=" d-flex-sm-none justify-content-sm-start d-flex justify-content-center"><h5>Manage Addresses</h5></div>
             <div class="row pt-sm-5 pt-4">
               <div class="col-6 ">
