4th page ready for review

--- a/account/delivery.html
+++ b/account/delivery.html
@@ -42,7 +42,7 @@
             <li class=" nav-link activ text-center  "><a class=" nav-item  mr-xl-5 pr-xl-3 d-xl-flex justify-content-center"  href="./profile.html">Personal Details</a></li>
             <li class="nav-link activ  text-center  "><a class="mr-xl-4   pr-xl-4 nav-item d-xl-flex justify-content-center"  href="./manageadd.html">Manage Addresses</a></li>
             <li class="nav-link active  text-center  "><a class=" mr-xl-3 active pr-xl-1 nav-item d-xl-flex justify-content-center"  href="./delivery.html">Deliveries & Packaging</a></li>
-            <li class="nav-link activ  text-center "><a class="mr-xl-5 pr-xl-3 pl-xl-1 nav-item d-xl-flex justify-content-center"  href="#">Food Preferences</a></li>
+            <li class="nav-link activ  text-center "><a class="mr-xl-5 pr-xl-3 pl-xl-1 nav-item d-xl-flex justify-content-center"  href="./foodpref.html">Food Preferences</a></li>
             <li class="nav-link activ  text-center "><a class="mr-xl-3 pr-xl-3 nav-item d-xl-flex justify-content-center"  href="#">Manage Subscription</a></li>
           </ul>
         </li>
