--- a/account/manageadd.html
+++ b/account/manageadd.html
@@ -20,9 +20,37 @@
       <a class="navbar-brand pl-md-4 mx-md-0 mx-auto pb-sm-3 col " href="#">
         <img src="./images/sprink_logo_png 1.png"  alt="">
       </a>
-      <a class="navbar-brand d-sm-none col px-0 pr-4 m-0 text-right" href="#">
+      <div class="col-4 px-0 mx-0"><a class="navbar-brand d-sm-none col px-0 pr-3 m-0 text-right" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" href="#sidemenu">
         <img class="p-0  rounded-circle col-3  border  " src="https://images.vexels.com/media/users/3/129616/isolated/preview/fb517f8913bd99cd48ef00facb4a67c0-businessman-avatar-silhouette-by-vexels.png">
       </a>
+      <div class="dropdown-menu" aria-labelledby="sidemenu">
+        <a> <a class="nav-link pl-4 ml-2" href="#collapseExample" data-toggle="collapse">My Profile</a>
+        <ul type="none" class="mt-0 p-0 pl-1 collapse " id="collapseExample">
+         
+          <li class=" nav-link active text-center  "><a class=" nav-item active mr-xl-5 pr-xl-3 d-xl-flex justify-content-center"  href="./profile.html">Personal Details</a></li>
+          <li class="nav-link activ  text-center  "><a class="mr-xl-4 pr-xl-4 nav-item d-xl-flex justify-content-center"  href="./manageadd.html">Manage Addresses</a></li>
+          <li class="nav-link activ  text-center  "><a class=" mr-xl-3 pr-xl-1 nav-item d-xl-flex justify-content-center"  href="./delivery.html">Deliveries & Packaging</a></li>
+          <li class="nav-link activ  text-center "><a class="mr-xl-5 pr-xl-3 pl-xl-1 nav-item d-xl-flex justify-content-center"  href="./foodpref.html">Food Preferences</a></li>
+          <li class="nav-link activ  text-center "><a class="mr-xl-3 pr-xl-3 nav-item d-xl-flex justify-content-center"  href="./managesub.html">Manage Subscription</a></li>
+        </ul>
+      </a>
+      <li class="nav-item pl-3">
+        <a class="nav-link" href="#">Food Calendar  
+          </a>
+      </li>
+      <li class="nav-item pl-3">
+        <a class="nav-link" href="#">Rewards/Referral</a>
+      </li>
+      <li class="nav-item pl-3">
+        <a class="nav-link" href="#">Billing</a>
+      </li>
+      <li class="nav-item pl-3">
+        <a class="nav-link" href="#">Contact Us</a>
+      </li>
+      <li class="nav-item pl-3">
+        <a class="nav-link" href="#">Sign Out</a>
+      </li>
+      </div></div>
     </nav>
     <div class="row">
       <ul class="nav flex-column col-md-2 col-sm-3 d-sm-flex d-none  pr-0">
