--- a/account/manageadd.html
+++ b/account/manageadd.html
@@ -24,8 +24,8 @@
         <img class="p-0  rounded-circle col-3  border  " src="https://images.vexels.com/media/users/3/129616/isolated/preview/fb517f8913bd99cd48ef00facb4a67c0-businessman-avatar-silhouette-by-vexels.png">
       </a>
       <div class="dropdown-menu" aria-labelledby="sidemenu">
-        <a> <a class="nav-link pl-4 ml-2" href="#collapseExample" data-toggle="collapse">My Profile</a>
-        <ul type="none" class="mt-0 p-0 pl-1 collapse " id="collapseExample">
+        <a> <a class="nav-link pl-4 ml-2" href="#collapseExample1" data-toggle="collapse">My Profile</a>
+        <ul type="none" class="mt-0 p-0 pl-1 collapse " id="collapseExample1">
          
           <li class=" nav-link active text-center  "><a class=" nav-item active mr-xl-5 pr-xl-3 d-xl-flex justify-content-center"  href="./profile.html">Personal Details</a></li>
           <li class="nav-link activ  text-center  "><a class="mr-xl-4 pr-xl-4 nav-item d-xl-flex justify-content-center"  href="./manageadd.html">Manage Addresses</a></li>
